feat: 1.18 architectury update