@@ -1,19 +1,14 @@
 package com.github.franckyi.ibeeditor.base.client;
 
 import com.github.franckyi.guapi.api.Color;
-import com.github.franckyi.ibeeditor.base.client.mvc.model.ItemListSelectionItemModel;
-import com.github.franckyi.ibeeditor.base.client.mvc.model.ListSelectionItemModel;
-import com.github.franckyi.ibeeditor.base.client.mvc.model.SpriteListSelectionItemModel;
+import com.github.franckyi.ibeeditor.base.client.mvc.model.*;
 import com.github.franckyi.ibeeditor.base.common.TagHelper;
 import net.minecraft.client.Minecraft;
 import net.minecraft.core.Registry;
-import net.minecraft.world.effect.MobEffect;
-import net.minecraft.world.entity.ai.attributes.Attribute;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
-import net.minecraft.world.item.alchemy.Potion;
-import net.minecraft.world.level.block.Block;
+import net.minecraft.world.item.enchantment.Enchantment;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -24,6 +19,8 @@ public final class ClientCache {
     private static List<ItemListSelectionItemModel> itemSelectionItems;
     private static List<String> blockSuggestions;
     private static List<ItemListSelectionItemModel> blockSelectionItems;
+    private static List<String> enchantmentSuggestions;
+    private static List<EnchantmentListSelectionItemModel> enchantmentSelectionItems;
     private static List<String> attributeSuggestions;
     private static List<ListSelectionItemModel> attributeSelectionItems;
     private static List<String> potionSuggestions;
@@ -32,16 +29,18 @@ public final class ClientCache {
     private static List<SpriteListSelectionItemModel> effectSelectionItems;
 
     public static void init() {
-        itemSuggestions = getSuggestions(Registry.ITEM);
-        itemSelectionItems = getItemSelectionItems(Registry.ITEM);
-        blockSuggestions = getSuggestions(Registry.BLOCK);
-        blockSelectionItems = getBlockSelectionItems(Registry.BLOCK);
-        attributeSuggestions = getSuggestions(Registry.ATTRIBUTE);
-        attributeSelectionItems = getAttributeSelectionItems(Registry.ATTRIBUTE);
-        potionSuggestions = getSuggestions(Registry.POTION);
-        potionSelectionItems = getPotionSelectionItems(Registry.POTION);
-        effectSuggestions = getSuggestions(Registry.MOB_EFFECT);
-        effectSelectionItems = getEffectSelectionItems(Registry.MOB_EFFECT);
+        itemSuggestions = buildSuggestions(Registry.ITEM);
+        itemSelectionItems = buildItemSelectionItems();
+        blockSuggestions = buildSuggestions(Registry.BLOCK);
+        blockSelectionItems = buildBlockSelectionItems();
+        enchantmentSuggestions = buildSuggestions(Registry.ENCHANTMENT);
+        enchantmentSelectionItems = buildEnchantmentSelectionItems();
+        attributeSuggestions = buildSuggestions(Registry.ATTRIBUTE);
+        attributeSelectionItems = buildAttributeSelectionItems();
+        potionSuggestions = buildSuggestions(Registry.POTION);
+        potionSelectionItems = buildPotionSelectionItems();
+        effectSuggestions = buildSuggestions(Registry.MOB_EFFECT);
+        effectSelectionItems = buildEffectSelectionItems();
     }
 
     public static List<String> getItemSuggestions() {
@@ -58,6 +57,44 @@ public final class ClientCache {
 
     public static List<ItemListSelectionItemModel> getBlockSelectionItems() {
         return blockSelectionItems;
+    }
+
+    public static List<String> getEnchantmentSuggestions() {
+        return enchantmentSuggestions;
+    }
+
+    public static List<SortedEnchantmentListSelectionItemModel> getSortedEnchantmentSelectionItems(ItemStack target) {
+        return enchantmentSelectionItems
+                .stream()
+                .map(item -> new SortedEnchantmentListSelectionItemModel(item, item.getEnchantment().isCurse(), item.getEnchantment().canEnchant(target)))
+                .sorted((o1, o2) -> {
+                    if (o1.isCurse()) {
+                        if (o2.isCurse()) {
+                            return o1.getName().compareTo(o2.getName());
+                        } else {
+                            return 1;
+                        }
+                    } else {
+                        if (o2.isCurse()) {
+                            return -1;
+                        } else {
+                            if (o1.canApply()) {
+                                if (o2.canApply()) {
+                                    return o1.getName().compareTo(o2.getName());
+                                } else {
+                                    return -1;
+                                }
+                            } else {
+                                if (o2.canApply()) {
+                                    return 1;
+                                } else {
+                                    return o1.getName().compareTo(o2.getName());
+                                }
+                            }
+                        }
+                    }
+                })
+                .toList();
     }
 
     public static List<String> getAttributeSuggestions() {
@@ -84,7 +121,7 @@ public final class ClientCache {
         return effectSelectionItems;
     }
 
-    private static List<String> getSuggestions(Registry<?> registry) {
+    private static List<String> buildSuggestions(Registry<?> registry) {
         List<String> suggestions = new ArrayList<>();
         registry.entrySet().stream()
                 .map(e -> e.getKey().location().toString())
@@ -98,34 +135,57 @@ public final class ClientCache {
         return suggestions;
     }
 
-    private static List<ItemListSelectionItemModel> getItemSelectionItems(Registry<Item> registry) {
-        return registry.entrySet().stream()
+    private static List<ItemListSelectionItemModel> buildItemSelectionItems() {
+        return Registry.ITEM.entrySet().stream()
                 .map(e -> new ItemListSelectionItemModel(e.getValue().getDescriptionId(), e.getKey().location(), new ItemStack(e.getValue())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private static List<ItemListSelectionItemModel> getBlockSelectionItems(Registry<Block> registry) {
-        return registry.entrySet().stream()
+    private static List<ItemListSelectionItemModel> buildBlockSelectionItems() {
+        return Registry.BLOCK.entrySet().stream()
                 .map(e -> new ItemListSelectionItemModel(e.getValue().getDescriptionId(), e.getKey().location(), new ItemStack(e.getValue())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private static List<ListSelectionItemModel> getAttributeSelectionItems(Registry<Attribute> registry) {
-        return registry.entrySet().stream()
+    private static List<EnchantmentListSelectionItemModel> buildEnchantmentSelectionItems() {
+        return Registry.ENCHANTMENT.entrySet().stream()
+                .map(e -> new EnchantmentListSelectionItemModel(e.getValue().getDescriptionId(), e.getKey().location(), e.getValue(), new ItemStack(getEnchantmentTypeItem(e.getValue()))))
+                .toList();
+    }
+
+    private static Item getEnchantmentTypeItem(Enchantment e) {
+        return switch (e.category) {
+            case ARMOR, WEARABLE -> Items.IRON_CHESTPLATE;
+            case ARMOR_FEET -> Items.DIAMOND_BOOTS;
+            case ARMOR_LEGS -> Items.DIAMOND_LEGGINGS;
+            case ARMOR_CHEST -> Items.DIAMOND_CHESTPLATE;
+            case ARMOR_HEAD -> Items.DIAMOND_HELMET;
+            case WEAPON -> Items.DIAMOND_SWORD;
+            case DIGGER -> Items.DIAMOND_PICKAXE;
+            case FISHING_ROD -> Items.FISHING_ROD;
+            case TRIDENT -> Items.TRIDENT;
+            case BOW -> Items.BOW;
+            case CROSSBOW -> Items.CROSSBOW;
+            case BREAKABLE, VANISHABLE -> Items.IRON_SHOVEL;
+        };
+    }
+
+    private static List<ListSelectionItemModel> buildAttributeSelectionItems() {
+        return Registry.ATTRIBUTE.entrySet().stream()
                 .map(e -> new ListSelectionItemModel(e.getValue().getDescriptionId(), e.getKey().location()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private static List<ItemListSelectionItemModel> getPotionSelectionItems(Registry<Potion> registry) {
-        return registry.entrySet().stream()
+    private static List<ItemListSelectionItemModel> buildPotionSelectionItems() {
+        return Registry.POTION.entrySet().stream()
                 .map(e -> new ItemListSelectionItemModel(e.getValue().getName(Items.POTION.getDescriptionId() + ".effect."), e.getKey().location(), TagHelper.fromPotion(e.getKey().location(), Color.NONE)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private static List<SpriteListSelectionItemModel> getEffectSelectionItems(Registry<MobEffect> registry) {
-        return registry.entrySet().stream()
+    private static List<SpriteListSelectionItemModel> buildEffectSelectionItems() {
+        return Registry.MOB_EFFECT.entrySet().stream()
                 .map(e -> new SpriteListSelectionItemModel(e.getValue().getDescriptionId(), e.getKey().location(), () -> Minecraft.getInstance().getMobEffectTextures().get(e.getValue())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
